non_executable_reasons_record/206.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
### å¿…è¦ãªè¨­å®šã®èª­ã¿è¾¼ã¿
name=jquery_tmp.html

### ã‚½ãƒ¼ã‚¹ã®ç·¨é›†
cat <<- 'EOS' > ${name}

<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
<html>
  <head>
    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
    <meta charset="utf-8">
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
    <title>Test Page</title>
    <style>
      #section-1 {
        background-color: #C8E6C9;
      }
      #section-2 {
        background-color: #FFF9C4;
      }
      .child1 {
        text-decoration: underline;
      }
      .child2 {
        font-size: 24px;
      }
      .child3 {
        color: red;
      }
    </style>
  </head>

  <body>
    <section id="section-1">
      <h2>Section1</h2>
      <p class="child1">Child node1</p>
      <p class="child2">Child node2</p>
      <p class="child3">Child node3</p>
    </section>
    <section id="section-2">
      <h2>Section2</h2>
      <p class="child1">Child node1</p>
      <p class="child2">Child node2</p>
      <p class="child3">Child node3</p>
    </section>
  </body>
</html>

EOS
------------------

[0;36m  File [0;32m"<tokenize>"[0;36m, line [0;32m20[0m
[0;31m    }[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m unindent does not match any outer indentation level

IndentationError: unindent does not match any outer indentation level (<tokenize>, line 20)

Executability                            : False
